--- a/cssblog/homepagecss.css
+++ b/cssblog/homepagecss.css
@@ -64,9 +64,16 @@ padding: 0;
  }
 
  @media(min-width: 800px) {
+          /*Computer*/
     body{
         grid-template-columns: 300px 300px 300px;
         grid-template-rows: 300px 600px;
         grid-template-areas: 195px ;
         font-size: 20px; 
     } 
+    @media only screen and (max-width: 700px) {
+        /*mobile phones*/ 
+        [class*="body"] {
+            width: 100%;
+        }
+    }
