--- a/cssblog/homepagecss.css
+++ b/cssblog/homepagecss.css
@@ -63,8 +63,10 @@ padding: 0;
      justify-content:center;
  }
 
-  @media (max-width:768px) {
-        .header {
-            width: 100%;
-        }
-    }
+ 
+ @media only screen 
+ and (min-device-width: 320px) 
+ and (max-device-width: 480px)
+ and (-webkit-min-device-pixel-ratio: 2) {
+
+}
