--- a/cssblog/blogpost.css
+++ b/cssblog/blogpost.css
@@ -49,10 +49,10 @@ ul{
     justify-content:center;
 }
 
-@media(min-width: 800px) {
-    body{
-        grid-template-columns: 300px 300px 300px;
-        grid-template-rows: 250px 600px;
-        grid-template-areas: 195px ;
-        font-size: 20px; 
-    } 
+
+ @media only screen 
+ and (min-device-width: 320px) 
+ and (max-device-width: 480px)
+ and (-webkit-min-device-pixel-ratio: 2) {
+
+}
