--- a/cssblog/homepagecss.css
+++ b/cssblog/homepagecss.css
@@ -5,9 +5,9 @@
  }
     
       .wrap{
-          width:100px;
+          width:100%;
           margin:auto;
-          margin-top:100px;
+          margin-top:100%;
       }
       .card{
           display: flex;
